        - unsharp mask
        - make i_conv() clamp the bottom end of the samples range too
          (makes it useful for sharpening)
        - adjust ascender/descender values for FT1.x to avoid losing
          descenders (specifically the bottom of "g" in ImUgly.ttf or
          arial.ttf at 14pixels)
        - added tga.c to read targa images
        - added i_bumpmap_complex to do more accurate bumpmapping
        - added an image type with doubles as samples
        - change i_copy() and i_sametype() to handle double/sample images
        - added basic POD to trans2.c
        - transform2 now uses the error interface
        - myrealloc() is implemented for malloc debug mode
        - now buffer chains are freed when destructor for Imager::IO
          is called
        - adjusted the Lanczos window width for the scaling code and
          added code to normalize the filter generated to preserve
          intensity scaling.
        - constant edge extension for scaling operations
        - better error checking of automatic fill conversions
        - fix some range checking for the fountain fill segment type

0.39  pre2
	- A few scattered mymalloc/free fixes
        - io_buffer implemented as a source for io layer and
          XS and perl OO code added.
        - Test for iolayer t/t07iolayer.t implemented.
	- Fixed known memory leaks.
	- gif screen was wasn't being calculated correctly

0.39    Released: Nov 2 2001.

0.40  pre1
        - anti-aliased polygon fill
        - add general fill to polygon fill
        - make color values smarter for the drawing functions
        - implemented reading and writing the TIFF text tags
        - added prototypes for some of the derivative tags functions

=================================================================

        For latest versions check the Imager-devel pages:
        http://www.eecs.umich.edu/~addi/perl/Imager/devel/

=================================================================
